<resources>
    <string name="app_name">OrderFood</string>
    <string name="loginTitle">Đăng Kí</string>
    <string name="user_hint">Tên đăng nhập</string>
    <string name="pw_hint">Mật Khẩu</string>
    <string name="str_nam">Nam</string>
    <string name="str_nu">Nữ</string>
    <string name="date_hint">Ngày sinh</string>
    <string name="card_hint">Chứng minh nhân dân</string>
    <string name="ok_btn">Đồng ý</string>
    <string name="strThoat">Thoát</string>
    <string name="err_input">Nhap thieu thong tin</string>
    <string name="nhap_thanh_cong">Nhap du lieu nhan vien THANH CONG</string>
    <string name="nhap_that_bai">Nhap du lieu nhan vien THAT BAI</string>
    <string name="str_ten_dang_nhap">Ten Dang Nhap</string>
    <string name="str_mat_khau">Mat Khau</string>
    <string name="str_dang_nhap">Dang nhap</string>
    <string name="str_dang_ki">Dang ki</string>
    <string name="str_warning_wrong_input_login">Vui long nhap du thong tin ten va mat khau</string>
    <string name="str_login_success">Dang nhap thanh cong</string>
    <string name="str_dialog_register_title">Dang nhap that bai</string>
    <string name="str_dialog_register_body">Ban co muon chuyen sang trang dang ky khong?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="str_trang_chu">Trang chu</string>
    <string name="str_thuc_don">Thuc don</string>
    <string name="str_nhan_vien">Nhan vien</string>
    <string name="str_thong_ke">Thong ke</string>
    <string name="str_cai_dat">Cai dat</string>
</resources>
