<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size30dp"
    android:background="@color/colorLoginBg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size30dp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/size30dp"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/edt_ten_dang_nhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint"
            android:drawableLeft="@mipmap/user"
            android:drawablePadding="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/colorAccent"
            />

        <EditText
            android:id="@+id/edt_mat_khau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pw_hint"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"/>

        <RadioGroup
            android:id="@+id/rg_gioi_tinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_nam"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nam"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size20dp"
                android:padding="@dimen/size10dp"/>
            <RadioButton
                android:id="@+id/rd_nu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nu"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size20dp"
                android:padding="@dimen/size10dp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edt_ngay_sinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/edt_cmnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_hint"
            android:drawableLeft="@mipmap/idcard"
            android:drawablePadding="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/colorAccent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_dong_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/size10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGreen"
                android:text="@string/ok_btn"/>

            <Button
                android:id="@+id/btn_thoat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/size10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrg"
                android:text="@string/strThoat"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>